//package wanyou.game.protocol;
//返回用户数值信息
message BseUserData {
    required int32  roleLevel = 1;          //角色等级
    required int32  roleMaxExp = 2;         //角色当前升级所需最大经验值
    required int32  roleAttack = 3;         //角色攻击属性
    required int32  roleDefend = 4;         //角色防御属性
    required int32  roleAgility = 5;        //角色敏捷属性
    required int32  roleLuck = 6;           //角色幸运属性
    required int32  roleBlood = 7;          //角色血量
    required int32  roleThew = 8;           //角色体力
    required int32  roleDamage = 9;         //角色伤害
    required int32  roleSkin = 10;          //角色护甲
	required int32  rolePower = 11;          //角色护甲
	optional int32 winodds     = 12;			//胜率
}
